# Emery

./: .gitignore  LICENSE  QUICKSTART.md  README.md  examples.py  pyproject.toml  requirements.txt  setup.py
emery_cli/: __init__.py  config.py  file_handler.py  git_handler.py  main.py
